# speaking_detection

./: .gitignore  .project  .pydevproject  Makefile  README  pyproject.toml
backend/: manage.py
backend/bubbles/: settings.py  urls.py  wsgi.py
tools/: landmarks.py  renderer.py  speaker.ipynb  speaker2.ipynb  tracker_example.py  voice.ipynb
tools/algo/: face.py  face_tracker.py  processor.py  scene_detect.py  tracker.py  voice_detect.py
tools/nn/: logger.py  speaker.py  speaker_dataset.py  trainer.py  voice.py
tools/utils/: detecting.py  fvs.py
